// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster creation control data for AI generates correctly 1`] = `
Array [
  Object {
    "id": "aiDetailStep",
    "title": "Cluster details",
    "type": "step",
  },
  Object {
    "active": "Host inventory",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  Object {
    "active": "Standalone",
    "id": "controlplane",
    "name": "Control plane type",
    "type": "reviewinfo",
  },
  Object {
    "available": Array [],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "placeholder": "Select a credential",
    "providerId": Array [
      "hybrid",
      "hostinventory",
    ],
    "tooltip": "The settings that are required for the selected provider. You can select an existing connection, or add a new connection. Cannot be changed after creation.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Select a connection",
      "required": false,
    },
  },
  Object {
    "additionalProps": Object {
      "promptSshPublicKey": true,
    },
    "component": <DetailsForm />,
    "encodeValues": Array [
      "pullSecret",
    ],
    "id": "ai",
    "mustValidate": true,
    "providerId": "ai",
    "type": "custom",
  },
  Object {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  Object {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  Object {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  Object {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": Object {
      "icon": <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  Object {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  Object {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  Object {
    "active": Array [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  Object {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
  Object {
    "comment": "Ensure these settings are correct. The saved cluster draft will be used to determine the available network resources. Therefore after you press Save you will not be able to change these cluster settings.",
    "disableEditorOnSuccess": true,
    "disablePreviousControlsOnSuccess": true,
    "id": "reviewSave",
    "nextButtonLabel": "Save",
    "title": "Review and save",
    "type": "review",
  },
  Object {
    "disabled": true,
    "id": "aiHostsStep",
    "title": "Hosts",
    "type": "step",
  },
  Object {
    "disabled": true,
    "id": "aiNetworkStep",
    "title": "Networking",
    "type": "step",
  },
  Object {
    "active": true,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
]
`;

exports[`Cluster creation control data for AI generates correctly for MCE 1`] = `
Array [
  Object {
    "id": "aiDetailStep",
    "title": "Cluster details",
    "type": "step",
  },
  Object {
    "active": "Host inventory",
    "id": "infrastructure",
    "name": "Infrastructure",
    "type": "reviewinfo",
  },
  Object {
    "active": "Standalone",
    "id": "controlplane",
    "name": "Control plane type",
    "type": "reviewinfo",
  },
  Object {
    "available": Array [],
    "footer": <CreateCredentialModal
      handleModalToggle={[MockFunction]}
    />,
    "id": "connection",
    "name": "Infrastructure provider credential",
    "placeholder": "Select a credential",
    "providerId": Array [
      "hybrid",
      "hostinventory",
    ],
    "tooltip": "The settings that are required for the selected provider. You can select an existing connection, or add a new connection. Cannot be changed after creation.",
    "type": "singleselect",
    "validation": Object {
      "notification": "Select a connection",
      "required": false,
    },
  },
  Object {
    "additionalProps": Object {
      "promptSshPublicKey": true,
    },
    "component": <DetailsForm />,
    "encodeValues": Array [
      "pullSecret",
    ],
    "id": "ai",
    "mustValidate": true,
    "providerId": "ai",
    "type": "custom",
  },
  Object {
    "id": "automationStep",
    "title": "Automation",
    "type": "step",
  },
  Object {
    "id": "chooseTemplate",
    "info": "Optional: Choose an automation template to run Ansible jobs at different stages of the cluster lifecycle.",
    "type": "title",
  },
  Object {
    "component": <AutomationProviderHint
      className="creation-view-controls-hint"
      component="hint"
    />,
    "id": "automationProviderHint",
    "type": "custom",
  },
  Object {
    "id": "templateName",
    "name": "Automation template",
    "onSelect": [Function],
    "placeholder": "Select an automation template",
    "prompts": Object {
      "icon": <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />,
      "id": "add-automation-template",
      "positionBottomRight": true,
      "prompt": "Add automation template",
      "type": "link",
      "url": "/multicloud/infrastructure/automations/add",
    },
    "tooltip": "Only templates with valid Ansible Automation Platform credentials are listed.",
    "type": "singleselect",
    "validation": Object {
      "required": false,
    },
  },
  Object {
    "component": <TemplateLinkOutControl />,
    "id": "curatorLinkOut",
    "type": "custom",
  },
  Object {
    "component": <TemplateSummaryControl />,
    "id": "curatorSummary",
    "type": "custom",
  },
  Object {
    "active": "",
    "id": "clusterCuratorSpec",
    "reverse": [Function],
    "type": "hidden",
  },
  Object {
    "active": Array [],
    "hidden": true,
    "id": "supportedCurations",
    "type": "values",
  },
  Object {
    "active": "",
    "id": "toweraccess-install",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-upgrade",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-scale",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "toweraccess-destroy",
    "type": "hidden",
  },
  Object {
    "active": "",
    "id": "reconcilePause",
    "type": "hidden",
  },
  Object {
    "comment": "Ensure these settings are correct. The saved cluster draft will be used to determine the available network resources. Therefore after you press Save you will not be able to change these cluster settings.",
    "disableEditorOnSuccess": true,
    "disablePreviousControlsOnSuccess": true,
    "id": "reviewSave",
    "nextButtonLabel": "Save",
    "title": "Review and save",
    "type": "review",
  },
  Object {
    "disabled": true,
    "id": "aiHostsStep",
    "title": "Hosts",
    "type": "step",
  },
  Object {
    "disabled": true,
    "id": "aiNetworkStep",
    "title": "Networking",
    "type": "step",
  },
  Object {
    "active": false,
    "id": "includeKlusterletAddonConfig",
    "type": "hidden",
  },
]
`;
